# https://gist.github.com/raulvillalobosjr

[metadata]
name = {MATHrv}
version = file: {name}/_version.txt
author = Raul Villalobos
author-email = raulvillajr95@gmail.com
home-page = https://github.com/raulvillalobosjr/MATHrv
description = {A math module :)}
long-description = file: README.md
long_description_content_type = text/markdown
license = Free
license-file = COPYING
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 1
    Intended Audience :: Any
    License :: Free
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/althonos/MATHrv/issues
    Changelog = https://github.com/althonos/MATHrv/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = MATHrv
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    {install_requires}
tests_require =
    {tests_require}

[options.extras_require]
dev =
    docutils
    Pygments
test =
    green
    coverage
ci = 
    # codacy-coverage
    # codecov

[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true